--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "openai": "^4.52.3",
